# wxcc-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  package-for-distribution.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: wxcc-agent-builder.md
.claude/rules/: flow-designer-questions.md  flowir-mcp-verification.md  webex-connect-questions.md
.claude/skills/build-digital-inbound/: SKILL.md  reference.md
.claude/skills/build-flow-designer/: reference.md
.claude/skills/build-flow-programmatic/: SKILL.md  reference.md
.claude/skills/build-notification/: SKILL.md
.claude/skills/build-outbound-flow/: SKILL.md  reference.md
.claude/skills/build-spec-diagram/: SKILL.md
.claude/skills/configure-scripted-agent/: reference.md
.claude/skills/wxcc-debug/: reference.md
.github/workflows/: ci.yml  release.yml
docs/examples/: demo-outbound-notifications.md
docs/playbooks/: ai-agent-studio.md  cross-channel-escalation.md  digital-inbound-agent.md  dual-call-paging.md  inbound-voice.md  outbound-apple-messages.md  outbound-email.md  outbound-sms.md  outbound-voice.md  scripted-agent-build.md  scripted-agent-design.md  sequential-dialing.md  webex-calling-paging.md  wxcc-setup.md
docs/reference/: ai-agent-studio-import-json.md  ai-agent-studio-scripted.md  ai-agent-studio.md  connect-apple-messages.md  connect-email.md  connect-multi-channel.md  connect-sms.md  connect-whatsapp.md  db-integration.md  digital-inbound.md  flow-designer-flowir.md  flow-designer-patterns.md  flow-designer.md  webex-connect-advanced.md  wxcc-platform.md  wxcc-provisioning-api.md
docs/reference/flow-designer-activities/: _index.md  blind-transfer.md  bre-request.md  bridged-transfer.md  business-hours.md  call-progress-analysis.md  collect-digits.md  condition.md  cryptographic-hash.md  escalate-cdg.md  feedback.md  functions-activity.md  generate-otp.md  get-queue-info.md  global-event-output-variables.md  goto.md  http-connector.md  menu.md  parse.md  percentage-allocation.md  queue-to-agent.md  receive-message.md  record.md  recording-control.md  reservation-start.md  schedule-callback.md  screen-pop.md  self-loop-limits.md  send-custom-message.md  send-digits.md  set-announcement.md  set-caller-id.md  set-whisper.md  upload-audio.md  verify-otp.md  virtual-agent-legacy.md
docs/templates/: ai-agent-design-doc.md  flow-designer-design-doc.md
specs/: flow-store-api-docs.json
src/wxcc_flow/: client.py  commands_lifecycle.py  commands_platform.py  commands_tracing.py  config.py  init_playbook.py  main.py  output.py  update_check.py
src/wxcc_flow/_playbook/: AGENTS.md  CLAUDE.md
src/wxcc_flow/_playbook/.claude/: settings.json
src/wxcc_flow/_playbook/.claude/agents/: wxcc-agent-builder.md
src/wxcc_flow/_playbook/.claude/rules/: flowir-mcp-verification.md  (+2 more)
src/wxcc_flow/_playbook/.codex/: config.toml
tests/: conftest.py  test_assemble.py  test_client.py  test_doc_consistency.py  test_drift_check.py  test_generator.py  test_generator_regression.py  test_init_playbook.py  test_live_mutation.py  test_live_readonly.py  test_release_integrity.py  test_spec_diff.py  test_update_check.py
tests/fixtures/: expected_widgets.py  mini_flow_store.json
tools/: wheel_playbook_smoke.py
tools/generator/: README.md  drift_check.py  flow-store-overrides.yaml  generate.py  parser.py  pull_spec.py  renderer.py
wxcc-dist/: assemble.py  mcp.bundled.json
wxcc-dist/codex/: agents-md-sections.md  config.toml
(+90 files in other folders)
