[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wxcc-toolkit"
version = "0.3.1"
description = "WxCC AI Agent Builder Toolkit — a Claude Code playbook (agent, skills, rules, docs) plus the wxcc-flow Flow Designer CLI, delivered via pip"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0",
]

[project.scripts]
wxcc-flow = "wxcc_flow.main:run"
wxcc-toolkit = "wxcc_flow.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Five patterns are required: setuptools' recursive glob does not descend into
# dot-directories AND does not match hidden files, so "_playbook/**" alone would
# drop .claude/, .codex/, .agents/, and the bundle-root .mcp.json from the
# wheel — each hidden tree needs its own pattern. AGENTS.md is non-hidden, so
# it's already covered by "_playbook/**".
wxcc_flow = [
    "_playbook/**",
    "_playbook/.claude/**",
    "_playbook/.mcp.json",
    "_playbook/.codex/**",
    "_playbook/.agents/**",
]

[dependency-groups]
# Generator/test toolchain (tools/generator/*.py + pytest import yaml);
# `uv run` includes this group by default.
dev = ["pytest>=8", "pyyaml>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Live tiers are OPT-IN. A plain `pytest` runs only the offline suite; the live
# read-only tier runs with `-m live`, the mutation tier with `-m mutation`
# (which ALSO requires WXCC_LIVE_MUTATION=1 — enforced in conftest). A CLI `-m`
# overrides this default deselection.
addopts = "-m 'not live and not mutation'"
markers = [
    "live: read-only tests that hit the live Flow Store API (Tier 1). Excluded by default; run with `-m live`. Auto-skip when no token resolves.",
    "mutation: create/modify/delete round-trips against live prod (Tier 2). Double-gated: `-m mutation` AND env WXCC_LIVE_MUTATION=1. All flows named CLITest_*, deleted in teardown.",
    "portaudit: per-activity output-port cross-check vs flowir §8 (a live subtest; reuses the shared activities fixture, no extra API calls).",
]
